[package]
name = "preview-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "preview_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
numpy = "0.27"
image = "0.25.9"
num = "0.4.3"
anyhow = "1.0"
natord = "1.0"